fix accordion not collapsing in lg-up

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -249,7 +249,7 @@ body{
 	display: none;
 }
 @media (min-width: 992px){
-	.collapse{
+	#admin-menu .collapse{
 		display: inherit;
 	}
 	
